<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_title"
        android:textSize="32sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_exchange_rate_conversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_exchange_rate_conversion" />

    <Button
        android:id="@+id/btn_temperature_conversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_temperature_conversion" />

</LinearLayout>